--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site settings
 title: Media Suite
-email: your-email@domain.com
+email: studio@mediasuite.co.nz
 description: > # this means to ignore newlines until "baseurl:"
   Build the right thing.
 baseurl: "" # the subpath of your site, e.g. /blog
