--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ email: studio@mediasuite.co.nz
 description: > # this means to ignore newlines until "baseurl:"
   Build the right thing.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://sandbox.mediasuite.co.nz" # the base hostname & protocol for your site
+url: "http://mediasuitenz.github.io/media-suite-site/" # the base hostname & protocol for your site
 
 # Build settings
 markdown: kramdown
