--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ title: Media Suite
 email: studio@mediasuite.co.nz
 description: > # this means to ignore newlines until "baseurl:"
   Build the right thing.
-permalink: short-urls-jekyll
+permalink: pretty
 baseurl: "/media-suite-site" # the subpath of your site, e.g. /media-suite-site
 url: "http://mediasuitenz.github.io" # the base hostname & protocol for your site
 
