--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "gulp-minify-css": "^1.2.2",
     "gulp-processhtml": "^1.1.0",
     "gulp-rename": "^1.2.2",
+    "gulp-rsync": "0.0.8",
     "gulp-uglify": "^1.5.1"
   }
 }
