--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "del": "^2.2.0",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.0",
+    "gulp-chmod": "^2.0.0",
     "gulp-clean-css": "^3.9.0",
     "gulp-concat": "^2.6.0",
     "gulp-processhtml": "^1.1.0",
