--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,11 +38,11 @@ jobs:
 
 workflows:
   version: 2
-  build:
+  build_deploy:
     jobs:
-      build:
-        filters:
-          branches:
-            only:
-              - master
-              - add-circleci-config
+      - build:
+          filters:
+            branches:
+              only:
+                - master
+                - add-circleci-config
