Update working directory to match repo name
Bump cache key

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,7 @@ jobs:
   build_deploy:
     docker:
       - image: circleci/node:6
-    working_directory: ~/media-suite-site
+    working_directory: ~/mediasuite.co.nz
     steps:
       - checkout
       - run:
@@ -17,7 +17,7 @@ jobs:
           name: Update PATH
           command: echo 'export PATH="$HOME/.gem/ruby/2.3.0/bin:$PATH"' >> $BASH_ENV
       - restore_cache:
-          key: dependency-cache-v0-2-{{ checksum "Gemfile.lock" }}-{{ checksum "package-lock.json" }}
+          key: dependency-cache-v0-3-{{ checksum "Gemfile.lock" }}-{{ checksum "package-lock.json" }}
       - run: 
           name: Install bundler
           command: gem install bundler --user-install --no-doc
@@ -28,7 +28,7 @@ jobs:
           name: Install dependencies
           command: npm install
       - save_cache:
-          key: dependency-cache-v0-2-{{ checksum "Gemfile.lock" }}-{{ checksum "package-lock.json" }}
+          key: dependency-cache-v0-3-{{ checksum "Gemfile.lock" }}-{{ checksum "package-lock.json" }}
           paths:
             - /home/circleci/.gem
             - ./node_modules
