--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,8 +11,8 @@ jobs:
           name: Update list of available packages
           command: sudo apt update
       - run:
-          name: Install ruby
-          command: sudo apt install ruby-full
+          name: Install packages
+          command: sudo apt install rsync ruby-full
       - run:
           name: Update PATH
           command: echo 'export PATH="$HOME/.gem/ruby/2.3.0/bin:$PATH"' >> $BASH_ENV
@@ -39,6 +39,15 @@ jobs:
           fingerprints:
             # SSH Key in Broken Jandal circleci.pem
             - "de:7b:22:2c:42:22:97:fe:f0:68:df:f1:38:2c:58:c2"
+      - run:
+          name: Add host to SSH config
+          command: |
+            cat >> ~/.ssh/config <<-EOF
+            Host mediasuite.co.nz
+              HostName $RSYNC_HOST
+              User $RSYNC_USER
+              StrictHostKeyChecking no
+            EOF
       - deploy:
           name: Deploy to remote host
           command: npm run deploy
