--- a/package.json
+++ b/package.json
@@ -2,13 +2,18 @@
   "name": "media-suite-site",
   "version": "0.0.1",
   "description": "The Gulp build process for the Media Suite website",
+  "engines": {
+    "node": ">= 6.*"
+  },
   "scripts": {
+    "build": "cd src && jekyll build",
     "watch": "cd src && jekyll serve",
     "deploy": "gulp && gulp deploy"
   },
   "private": true,
   "devDependencies": {
     "del": "^2.2.0",
+    "fancy-log": "^1.3.3",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.0",
     "gulp-chmod": "^2.0.0",
@@ -17,6 +22,7 @@
     "gulp-processhtml": "^1.1.0",
     "gulp-rename": "^1.2.2",
     "gulp-rsync": "0.0.8",
-    "gulp-uglify": "^1.5.1"
+    "gulp-uglify": "^1.5.1",
+    "request": "^2.88.0"
   }
 }
