Update to Node.js 10.x (LTS) and Gulp.js 4.0
Update packages for Node.js 10.x (LTS).
Update CircleCI config.
Migrate gulpfile.js to Gulp.js 4.0.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ version: 2
 jobs:
   build_deploy:
     docker:
-      - image: circleci/node:6
+      - image: circleci/node:10
     working_directory: ~/mediasuite.co.nz
     steps:
       - checkout
@@ -17,7 +17,7 @@ jobs:
           name: Update PATH
           command: echo 'export PATH="$HOME/.gem/ruby/2.3.0/bin:$PATH"' >> $BASH_ENV
       - restore_cache:
-          key: dependency-cache-v0-3-{{ checksum "Gemfile.lock" }}-{{ checksum "package-lock.json" }}
+          key: dependency-cache-v1-{{ checksum "Gemfile.lock" }}-{{ checksum "package-lock.json" }}
       - run: 
           name: Install bundler
           command: gem install bundler --user-install --no-doc
@@ -28,7 +28,7 @@ jobs:
           name: Install dependencies
           command: npm install
       - save_cache:
-          key: dependency-cache-v0-3-{{ checksum "Gemfile.lock" }}-{{ checksum "package-lock.json" }}
+          key: dependency-cache-v1-{{ checksum "Gemfile.lock" }}-{{ checksum "package-lock.json" }}
           paths:
             - /home/circleci/.gem
             - ./node_modules
