--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "media-suite-site",
+  "name": "mediasuite.co.nz",
   "version": "0.0.1",
   "description": "The Gulp build process for the Media Suite website",
   "engines": {
-    "node": ">= 6.*"
+    "node": ">= 10.x"
   },
   "scripts": {
     "build": "cd src && jekyll build",
@@ -12,17 +12,19 @@
   },
   "private": true,
   "devDependencies": {
-    "del": "^2.2.0",
+    "del": "^5.1.0",
     "fancy-log": "^1.3.3",
-    "gulp": "^3.9.1",
-    "gulp-autoprefixer": "^3.1.0",
-    "gulp-chmod": "^2.0.0",
-    "gulp-clean-css": "^3.9.0",
-    "gulp-concat": "^2.6.0",
-    "gulp-processhtml": "^1.1.0",
-    "gulp-rename": "^1.2.2",
+    "gulp": "^4.0.2",
+    "gulp-autoprefixer": "^7.0.0",
+    "gulp-chmod": "^3.0.0",
+    "gulp-clean-css": "^4.2.0",
+    "gulp-concat": "^2.6.1",
+    "gulp-processhtml": "^1.2.0",
+    "gulp-rename": "^1.4.0",
     "gulp-rsync": "0.0.8",
-    "gulp-uglify": "^1.5.1",
+    "gulp-uglify": "^3.0.2",
     "request": "^2.88.0"
-  }
+  },
+  "dependencies": {},
+  "browserslist": ["last 2 versions"]
 }
